--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,9 @@
 <body>
     <script>
         var number = 25;
-        if (number >= 21) (alert('Ce nombre est supérieur à 21'));
+        if (number >= 21) {
+            alert ('Ce nombre est supérieur à 21');
+        }
     </script>
 </body>
 </html>
